
- Improved: Finally the floating action button stays visible when the keyboard is shown (will be shifted above it)
- Improved: Bottom bar not above keyboard anymore
- Improved: Prevent status messages from covering elements like floating action button and bottom bar
- Improved: Animated menu icons in bottom bar when navigating
- Improved: Network and user interface behavior when offline (#492)
- Fixed: Recipe actions throwing errors (thanks @timhae!) (#646)
- Fixed: Simultaneous display of recipe photos and placeholder images
- Fixed: Behavior option "reduce app startup time" not working on Android 12+
- Fixed: Crash on recipe page because server somehow returns wrong floating point format (#652)
- Fixed: Floating action button not hidden in shopping mode
- Fixed: Occasionally dark toolbar menu icons in dark mode (thanks @martin-braun!) (#631)
- Fixed: Unintended length limit on bottom sheet for general text and number input (#657)
- Fixed: Occasional crashes on stock journal and master product page
- Fixed: Stores selection list not redesigned
- Fixed: Recipe preparation not displayed in certain conditions

## 3.0.0

- New: Material You redesign with dynamic colors for Android 12+
- New: Replaced HTML editor for recipe and product descriptions (same like on grocy server)
- New: Support for more than two decimal places for amounts & prices, uses option from server (#459)
- New: Product option "Move on open" (#569)
- New: Option in behavior settings for copying barcode note to stock entry note field (#609)
- New: Option on purchase page to print stock label and default option on master product page (#570)
- Improved: Layout on large screens
- Improved: (not F-Droid) ML Kit scanner now only recognises barcodes in preview field
- Improved: Shopping mode page now can be opened with deeplink "grocy://shoppingmodepage" (#519)
- Improved: Selection of child products in purchase form if parent product has no own stock (#508)